--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
-<h1>Help</h1>
-<p>Coming Soon!</p>
+<div class="center jumbotron">
+  <h1>Demo App</h1>
+ 
+  <h2>
+    Welcome to the home page of my Demo app! 
+  </h2>
+  <%= link_to "Help is here!", help_path, class: "btn btn-lg btn-primary" %>
+</div>
